--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "ansi-regex": "^6.0.1",
     "axios": "^0.21.4",
     "bootstrap": "^4.4.1",
     "node-sass": "^4.14.1",
